--- a/templates/register.html
+++ b/templates/register.html
@@ -157,7 +157,7 @@ content %}
             </svg>
           </button>
         </div>
-        <p class="mt-2 text-xs text-gray-500">
+        <p class="mt-2 text-xs text-blue-200">
           Minimal 8 karakter, harus mengandung huruf besar, huruf kecil, dan
           angka.
         </p>
@@ -174,7 +174,7 @@ content %}
       </div>
     </form>
 
-    <p class="mt-6 text-center text-sm text-gray-600">
+    <p class="mt-6 text-center text-sm text-blue-200">
       Sudah punya akun?
       <a
         href="{{ url_for('login') }}"
